Variables of one playbook does not work in other playbook

--- a/var-example1.yaml
+++ b/var-example1.yaml
@@ -17,7 +17,12 @@
              debug:
                      msg: "Printing {{myvar1}} and {{myvar2}}"
 
-
+ - name : This is a new playbook to print the variables
+   hosts: worker2
+   tasks:
+           - name: "Printing Variables" 
+             debug:
+                     msg: myvar1 is "{{myvar1}}"
 
 
 
