--- a/fact-example1-when.yaml
+++ b/fact-example1-when.yaml
@@ -14,7 +14,7 @@
              when: ansible_pkg_mgr == "yum"
 
            - name: Install Appache using apt
-             yum:
+             apt:
                      name: apache2
                      state: present
              when: ansible_pkg_mgr == "apt"
